--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>net.osgiliath.datamigrator</groupId>
@@ -15,7 +16,7 @@
         <log4j.version>2.22.0</log4j.version>
         <testcontainers.version>1.21.3</testcontainers.version>
         <jgrapht.version>1.5.2</jgrapht.version>
-        <tinkerpop.version>3.7.4</tinkerpop.version>
+        <tinkerpop.version>3.8.0</tinkerpop.version>
         <javax.transaction.jta.version>1.1</javax.transaction.jta.version>
         <net.datafaker.version>2.4.4</net.datafaker.version>
         <jakarta.persistenceapi.version>3.1.0</jakarta.persistenceapi.version>
