--- a/datamigrator-archetype/src/main/resources/archetype-resources/pom.xml
+++ b/datamigrator-archetype/src/main/resources/archetype-resources/pom.xml
@@ -154,7 +154,7 @@
                         </annotationProcessorPath>
                         <annotationProcessorPath>
                             <groupId>org.hibernate.orm</groupId>
-                            <artifactId>hibernate-jpamodelgen</artifactId>
+                            <artifactId>hibernate-processor</artifactId>
                             <version>${hibernate.version}</version>
                         </annotationProcessorPath>
                         <annotationProcessorPath>
@@ -192,8 +192,8 @@
                 <artifactId>maven-failsafe-plugin</artifactId>
             </plugin>
             <plugin>
-                <groupId>org.hibernate.orm.tooling</groupId>
-                <artifactId>hibernate-enhance-maven-plugin</artifactId>
+                <groupId>org.hibernate.orm</groupId>
+                <artifactId>hibernate-maven-plugin</artifactId>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -240,7 +240,7 @@
                                 </annotationProcessorPath>
                                 <annotationProcessorPath>
                                     <groupId>org.hibernate.orm</groupId>
-                                    <artifactId>hibernate-jpamodelgen</artifactId>
+                                    <artifactId>hibernate-processor</artifactId>
                                     <version>${hibernate.version}</version>
                                 </annotationProcessorPath>
                                 <annotationProcessorPath>
@@ -296,8 +296,8 @@
                         </dependencies>
                     </plugin>
                     <plugin>
-                        <groupId>org.hibernate.orm.tooling</groupId>
-                        <artifactId>hibernate-enhance-maven-plugin</artifactId>
+                        <groupId>org.hibernate.orm</groupId>
+                        <artifactId>hibernate-maven-plugin</artifactId>
                     </plugin>
                     <plugin>
                         <groupId>com.cmeza</groupId>
@@ -409,7 +409,7 @@
                                 </annotationProcessorPath>
                                 <annotationProcessorPath>
                                     <groupId>org.hibernate.orm</groupId>
-                                    <artifactId>hibernate-jpamodelgen</artifactId>
+                                    <artifactId>hibernate-processor</artifactId>
                                     <version>${hibernate.version}</version>
                                 </annotationProcessorPath>
                                 <annotationProcessorPath>
@@ -573,8 +573,8 @@
                         </dependencies>
                     </plugin>
                     <plugin>
-                        <groupId>org.hibernate.orm.tooling</groupId>
-                        <artifactId>hibernate-enhance-maven-plugin</artifactId>
+                        <groupId>org.hibernate.orm</groupId>
+                        <artifactId>hibernate-maven-plugin</artifactId>
                     </plugin>
                     <plugin>
                         <groupId>com.cmeza</groupId>
@@ -798,7 +798,7 @@
                                 </annotationProcessorPath>
                                 <annotationProcessorPath>
                                     <groupId>org.hibernate.orm</groupId>
-                                    <artifactId>hibernate-jpamodelgen</artifactId>
+                                    <artifactId>hibernate-processor</artifactId>
                                     <version>${hibernate.version}</version>
                                 </annotationProcessorPath>
                                 <annotationProcessorPath>
@@ -811,8 +811,8 @@
                         </configuration>
                     </plugin>
                     <plugin>
-                        <groupId>org.hibernate.orm.tooling</groupId>
-                        <artifactId>hibernate-enhance-maven-plugin</artifactId>
+                        <groupId>org.hibernate.orm</groupId>
+                        <artifactId>hibernate-maven-plugin</artifactId>
                     </plugin>
                     <plugin>
                         <groupId>com.cmeza</groupId>
@@ -908,7 +908,7 @@
         </dependency>
         <dependency>
             <groupId>org.hibernate.orm</groupId>
-            <artifactId>hibernate-jpamodelgen</artifactId>
+            <artifactId>hibernate-processor</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
