refine hibernate maven plugin

--- a/datamigrator-archetype/src/main/resources/archetype-resources/pom.xml
+++ b/datamigrator-archetype/src/main/resources/archetype-resources/pom.xml
@@ -813,6 +813,15 @@
                     <plugin>
                         <groupId>org.hibernate.orm</groupId>
                         <artifactId>hibernate-maven-plugin</artifactId>
+                        <configuration>
+                            <fileSets>
+                                <fileSet>
+                                    <directory>
+                                        ${project.build.directory}/generated-sources/entities
+                                    </directory>
+                                </fileSet>
+                            </fileSets>
+                        </configuration>
                     </plugin>
                     <plugin>
                         <groupId>com.cmeza</groupId>
